--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,5 +11,5 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - run: "npm install"
-      - run: "npm test"
+      - run: "npm run test"
 
